fix: search for combinator filter side spacing

--- a/src/frontend/scss/main.scss
+++ b/src/frontend/scss/main.scss
@@ -399,6 +399,10 @@ h2:focus-visible {
         margin-bottom: 20px;
       }
 
+      .side-filter-case-sensitive {
+        padding-bottom: 30px;
+      }
+
       .side-filter-fieldset {
         margin-top: -30px;
         margin-bottom: 30px;
